--- a/views/parts/footer.phtml
+++ b/views/parts/footer.phtml
@@ -2,5 +2,5 @@
     <div class="footerleft">
         Originally developed and designed by <a href="/profile/76561198043770492" target="_blank">ncla</a>. Improved and maintained by <a href="/profile/76561198047900528" target="_blank">iVerb</a>, <a href="/profile/76561198049848090" target="_blank">NeKz</a> and <a href="/profile/76561198045074889" target="_blank">Jonese1234</a>.
     </div>
-    <div class="footeright">This page was generated in <?php echo round(microtime(true) - $this->startupTimestamp, 3); ?> seconds</div>
+    <div class="footeright"><a href="javascript:toggleTheme()">Toggle Light/Dark Mode</a></div>
 </div>
