--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1971,12 +1971,20 @@ html[class="dark"] {
 }
 
 html[class="dark"] select>option {
-    background-color: #0002;
+    background: #3e4146;
     color: #ffffff;
 }
 
 html[class="dark"] .checkbox,html[class="dark"] input[type="submit"] {
     filter: invert(85%);
+}
+
+html[class="dark"] .fa.fa-download,html[class="dark"] .fa.fa-gamepad {
+    color: #aaa !important;
+}
+
+html[class="dark"] .fa.fa-download:hover {
+    color: #4ba6db !important;
 }
 
 html[class="dark"] .controls .button, html[class="dark"] .controls span.currentPageLabel {
@@ -1985,6 +1993,7 @@ html[class="dark"] .controls .button, html[class="dark"] .controls span.currentP
     display: inline-block;
     border: 2px solid #0002;
     box-sizing: content-box;
+    color: #fff;
 }
 
 html[class="dark"] label {
@@ -2005,12 +2014,22 @@ html[class="dark"] input[type=text],html[class="dark"]  input[type=number],html[
     background: #0002;
 }
 
-html[class="dark"] input[type=text]:focus  {
+html[class="dark"] input:focus,html[class="dark"] select:focus  {
     outline: none;
 }
 
 html[class="dark"] p {
     color: #ffffff;
+}
+
+html[class="dark"] .highlight {
+    color: #37b5ff;;
+}
+
+html[class="dark"] #chamber .entry.you .boardname,html[class="dark"]  #chamber .entry.you .boardname a,
+html[class="dark"] #chamber .entry.you .rank,html[class="dark"]  #chamber .entry.you .rank a,
+html[class="dark"] #chamber .entry.you .score,html[class="dark"] #chamber .entry.you .score a {
+    color: #37b5ff;
 }
 
 /*HEADER*/
@@ -2043,13 +2062,6 @@ html[class="dark"] .nav_dropdown>ul {
     /*border-radius:5px;*/
     box-shadow: 0px 1px 2px #0008;
     -webkit-box-shadow: 0px 1px 2px #0008;
-}
-html[class="dark"] .nav_dropdown li:first-child{ 
-    /* border-radius:5px 5px 0px 0px;  */
-}
-
-html[class="dark"] .nav_dropdown li:last-child{ 
-    /* border-radius:0px 0px 5px 5px;  */
 }
 
 html[class="dark"] .nav_dropdown>ul .btnLabel{
@@ -2096,14 +2108,12 @@ html[class="dark"] #footer{
 
 /*CHANGELOG*/
 
-html[class="dark"] #changelogActivity{
-    background:none !important;
+html[class="dark"] #changelogactivity {
+    background-color: #36393f;
 }
 
 html[class="dark"] #changelogActivity .morris-hover{
     background-color: #282b30 !important;
-    border-radius:0px;
-    /* border:none; */
     color:#a0a2a4;
     box-shadow: 0px 1px 2px #0008;
     -webkit-box-shadow: 0px 1px 2px #0008;
@@ -2112,9 +2122,12 @@ html[class="dark"] #changelogActivity .morris-hover{
 html[class="dark"] #changelog>#filters{
     background:#36393f;
     border-color:#36393f;
-    /*border-radius:3px;*/
     box-shadow: 0px 1px 2px #0005;
     -webkit-box-shadow: 0px 1px 2px #0005;
+}
+
+html[class="dark"] #changelog div {
+    color:#f6f6f7;
 }
 
 html[class="dark"] #changelog #filter_instructions_lol{
@@ -2123,10 +2136,6 @@ html[class="dark"] #changelog #filter_instructions_lol{
 
 html[class="dark"] #changelog label,html[class="dark"] #changelog .check>div:first-child{
     color:#fff;
-}
-
-html[class="dark"] #changelog input[type=text]{
-    /* height:31px; */
 }
 
 html[class="dark"] #entries{
@@ -2153,16 +2162,9 @@ html[class="dark"] #changelog input[type=submit] {
 
 /* CHAMBERS */
 
-html[class="dark"] #chambers .chamberimage{
-    /* border:none; */
-}
-
 html[class="dark"] #chambers .chamber{
     background:#36393e;
-    /*border-radius: 5px;*/
-    /* border:none; */
     border-bottom: 2px solid #0008;
-    overflow:hidden;
     box-shadow: 0px 1px 2px #0008;
     -webkit-box-shadow: 0px 1px 2px #0008;
 }
@@ -2199,13 +2201,8 @@ html[class="dark"] #chambers .chambertitle .titlebghelper{
 
 /* AGGREGATED AND CHAMBERS */
 
-html[class="dark"] #aggregated #time,html[class="dark"] #aggregated #points{
-    /* width: 49.7%; */
-}
-
 html[class="dark"] #aggregated .entry,html[class="dark"] #chamber .entry{
     background: #3e4146;
-    /* border:none; */
     border-bottom: 1px solid #36393e;
 }
 
@@ -2222,7 +2219,10 @@ html[class="dark"] #aggregated .entry>div,html[class="dark"] #chamber .entry>div
 
 html[class="dark"] #profile .profile-title,html[class="dark"] #profile .column-3 .column,html[class="dark"] #profile a,html[class="dark"] #profile .scoretable {
     color: #fff;
-    background:#36393e;
+}
+
+html[class="dark"] .profile-title,html[class="dark"] .block-content.all-records, html[class="dark"] .global-stats {
+    background:#36393e !important;
 }
 
 html[class="dark"] #profile .button:hover,html[class="dark"] #editProfile .button:hover {
@@ -2234,21 +2234,14 @@ html[class="dark"] #profile{
     background:none;
 }
 
-html[class="dark"] #profile #profileimage{
-    /* width:110%; */
-    /* left:-5%; */
-}
-
 html[class="dark"] #profile .noactivity{
     background:none;
     color:#c0c1c2;
 }
 
 html[class="dark"] #profile>div,html[class="dark"] #profile .column-3>div>div{
-    /* background:none !important; */
-    /* color:#c0c1c2 !important; */
+    background:none;
     color: #fff;
-    background:#36393e;
 }
 
 html[class="dark"] #profile .button,html[class="dark"] #editProfile .button {
