Improve dark mode

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1979,12 +1979,28 @@ html[class="dark"] .checkbox,html[class="dark"] input[type="submit"] {
     filter: invert(85%);
 }
 
-html[class="dark"] .fa.fa-download,html[class="dark"] .fa.fa-gamepad {
+html[class="dark"] .fa.fa-download,
+html[class="dark"] .fa.fa-gamepad,
+html[class="dark"] .fa.fa-ban,
+html[class="dark"] .fa.fa-times {
     color: #aaa !important;
 }
 
-html[class="dark"] .fa.fa-download:hover {
+html[class="dark"] .fa.fa-download:hover,
+html[class="dark"] .fa.fa-times:hover {
     color: #4ba6db !important;
+}
+
+html[class="dark"] .fa.fa-ban:hover,
+html[class="dark"] .fa.fa-youtube-play:hover {
+    color: #db4b4b !important;
+}
+
+html[class="dark"] body > #youtube #descriptionContainer {
+    background: #444;
+    color: #fff;
+    border-left: 1px solid #444;
+    border-right: 1px solid #444;
 }
 
 html[class="dark"] .controls .button, html[class="dark"] .controls span.currentPageLabel {
@@ -2181,8 +2197,24 @@ html[class="dark"] #chambers .entry .youtube i{
     color: #aaa !important;
 }
 
+html[class="dark"] #changelog .youtube i{
+    color: #aaa !important;
+}
+
+html[class="dark"] #changelog .youtube i:hover{
+    color: red !important;
+}
+
+html[class="dark"] #chamber .youtube i{
+    color: #aaa !important;
+}
+
+html[class="dark"] #chamber .youtube i:hover{
+    color: red !important;
+}
+
 html[class="dark"] #chambers .entry .youtube i:hover{
-    color: #777 !important;
+    color: red !important;
 }
 
 html[class="dark"] #chambers .chambertitle .titlebg{
