--- a/views/parts/userinfo.phtml
+++ b/views/parts/userinfo.phtml
@@ -1,5 +1,5 @@
 <?php if(!isset(SteamSignIn::$loggedInUser)): ?>
-	<a href="<?php echo SteamSignIn::genUrl((!empty($_SERVER['HTTPS']) ? 'https' : 'http') . '://' . $_SERVER['HTTP_HOST']."/login"); ?>" id="loginsteam"></a>
+	<a href="<?php echo SteamSignIn::genUrl(Config::get()->is_using_proxy ? $_SERVER['HTTP_X_FORWARDED_HOST'] : $_SERVER['HTTP_HOST'], "/login"); ?>" id="loginsteam"></a>
 	<div id="seper"></div>
 	<div id="edition"></div>
 <?php else: ?>
