Bring back page generation time

--- a/views/parts/footer.phtml
+++ b/views/parts/footer.phtml
@@ -1,6 +1,6 @@
 <div id="footer">
     <div class="footerleft">
-        Originally developed and designed by <a href="/profile/76561198043770492" target="_blank">ncla</a>. Improved and maintained by <a href="/profile/76561198047900528" target="_blank">iVerb</a>, <a href="/profile/76561198049848090" target="_blank">NeKz</a> and <a href="/profile/76561198045074889" target="_blank">Jonese1234</a>.
+        Originally developed and designed by <a href="/profile/76561198043770492" target="_blank">ncla</a>. Improved by <a href="/profile/76561198047900528" target="_blank">iVerb</a>. Maintained by <a href="/profile/76561198045074889" target="_blank">Jonese1234</a>, <a href="/profile/76561198080061817" target="_blank">mlugg</a> and <a href="/profile/76561198049848090" target="_blank">NeKz</a>.
     </div>
-    <div class="footeright"><a href="javascript:toggleTheme()">Toggle Light/Dark Mode</a></div>
+    <div class="footeright"><span style="margin-right: 25px">This page was generated in <?php echo round(microtime(true) - $this->startupTimestamp, 3); ?> seconds</span><a href="javascript:toggleTheme()">Toggle Light/Dark Mode</a></div>
 </div>
