--- a/views/editprofile.phtml
+++ b/views/editprofile.phtml
@@ -15,7 +15,7 @@
         </form>
     </div>
     <?php if(isset($view->msg)): ?>
-        <div><?=$view->msg?></div>
+        <div class="msg"><?=$view->msg?></div>
     <?php endif; ?>
 
     <div class="auth_hash" style="display: flex; gap: 1rem;">
