--- a/views/parts/main.phtml
+++ b/views/parts/main.phtml
@@ -19,7 +19,7 @@
         <title><?php echo $view->siteTitle . View::$pageData["pageTitle"]; ?></title>
 
         <?php foreach($view->css as [$path, $hash]): ?>
-            <link rel="stylesheet" type="text/css" href="<?=$path; ?>?v=<?=$view->browserCacheVersion; ?>"<?php echo isset($hash) ? " integrity=\"$hash\" crossorigin=\"anonymous\"" : '' ?>>
+            <link rel="stylesheet" type="text/css" href="<?=$path; ?>"<?php echo isset($hash) ? " integrity=\"$hash\" crossorigin=\"anonymous\"" : '' ?>>
         <?php endforeach; ?>
 
         <?php foreach($view->js as [$path, $hash]): ?>
