Fix ranking colors changing on chamber page We only want to redraw the rankings on pages that call the function.

--- a/views/parts/main.phtml
+++ b/views/parts/main.phtml
@@ -40,9 +40,11 @@
                     document.documentElement.classList.add('dark');
                 }
 
-                $(".rank, .preRank, .postRank").each(function() {
-                    !this.firstElementChild && drawRank($(this));
-                });
+                if (location.pathname.startsWith('/changelog') || location.pathname.startsWith('/profile/')) {
+                    $(".rank, .preRank, .postRank").each(function() {
+                        !this.firstElementChild && drawRank($(this));
+                    });
+                }
             }
         </script>
     </head>
