Announce Challenge Mode for Portal Stories: Mel

--- a/views/parts/announcement.phtml
+++ b/views/parts/announcement.phtml
@@ -1,11 +1,11 @@
-<?php $cookieName = "site-notification-12-08-2021"; ?>
+<?php $cookieName = "site-notification-2024-05-11"; ?>
 <?php $giveAnnouncement = true; ?>
 
 <?php if(!isset($_COOKIE[$cookieName]) && $giveAnnouncement): ?>
 
     <div id="announcement">
         <span class="notification">
-            <b>Announcement:</b> Top 500 ranks & evidence requirements for top 200. For more information <a href="https://discord.gg/hRwE4Zr" target="_blank"><b>check the discord</b></a>.
+            <b>Announcement:</b> Challenge Mode for Portal Stories: Mel is out now! For more information <a href="https://discord.gg/hRwE4Zr" target="_blank"><b>check the discord</b></a>.
         </span>
         <span class="close-btn"></span>
     </div>
