Add link to mel.board.portal2.sr

--- a/views/parts/navigation.phtml
+++ b/views/parts/navigation.phtml
@@ -82,7 +82,13 @@
 <div class="nav_dropdown">
     <div id="aperture_icon" class="nav_icon"></div>
     <div class="btnLabel">More</div>
-    <ul style="width:145px">
+    <ul style="width:165px">
+      <li class="nav_dropdown">
+         <a href="https://mel.board.portal2.sr" target="_blank" style="height: 29px">
+              <div class="nav_icon">PS</div>
+              <div class="btnLabel">Portal Stories: Mel</div>
+          </a>
+      </li>
       <li class="nav_dropdown">
           <a href="https://www.speedrun.com/Portal_2" target="_blank" style="height: 29px">
               <div class="nav_icon" style="background: url('/images/running.png'); background-size: 29px 29px;"></div>
