--- a/views/changelog.phtml
+++ b/views/changelog.phtml
@@ -161,6 +161,7 @@
                 <div class="improvement">Improvement</div>
                 <div class="demo-url"></div>
                 <div class="youtube"></div>
+                <div class="youtube"></div>
                 <div class="submission"></div>
                 <div class="submission"></div>
                 <div class="banScore"><?php if (SteamSignIn::loggedInUserIsAdmin()): ?><?php endif; ?></div>
