Split d3 package Let's only pull in what is really needed for d3-scale. This reduces data usage from 60.5kb down to 21.4kB.

--- a/views/parts/main.phtml
+++ b/views/parts/main.phtml
@@ -7,7 +7,7 @@
             http-equiv="Content-Security-Policy"
             content="
                 default-src 'self';
-                script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
+                script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net;
                 style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
                 font-src 'self' https://cdnjs.cloudflare.com;
                 frame-src https://www.youtube.com;
